8255947: [macos] Signed macOS jpackage app doesn't filter spurious '-psn' argument